# LolAnalyzer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  REST-API.yaml
exe/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/LibLolAnalyzer/: CMakeLists.txt  LolApi.cpp  LolApi.hpp  Summoner.cpp  Summoner.hpp
libs/LibRest/: Algorithms.hpp  CMakeLists.txt  ExpectedTask.hpp  JsonParser.hpp  RequestSplitter.cpp  RequestSplitter.hpp  Result.hpp  Utils.cpp  Utils.hpp
server/: CMakeLists.txt  RestServer.cpp  RestServer.hpp  main.cpp
unit_tests/: CMakeLists.txt  test_request_splitter.cpp
